--- a/rightstart-frontend/src/App.css
+++ b/rightstart-frontend/src/App.css
@@ -1,12 +1,39 @@
 body {
-  background-color: #CF9DC8;
-  background-size: cover;
-  background-position: center;
-  height: 100%;
-  width: 100%;
-  margin: 0;
+  background-color: #CF9DC8; 
+  z-index: 1;
 }
 
-.header{
-  background-image: url("C:\Users\nicole\OneDrive - National University of Ireland, Galway\college\year 4\Semester2\Final Year Project\newProject\ibs-system-api-front\public\header.jpeg");
+.headerImage {
+  opacity: 0.5;
+  size: 100% auto;
+  width: 100%;
+  height: 450px;
 }
+.writingOfLogo {
+  width: 60px;
+  height: 60px;
+  margin-right: 5px;
+}
+.houseOfLogo {
+  width: 30px;
+  height: 60px;
+}
+
+.ribbon {
+  position: fixed;
+  position: fixed;
+  top: 2%;
+  left: 50%;
+  width: 80%;
+  height: 30px;
+  z-index: 2;
+  transform: translateX(-50%);
+  opacity: 1.5;
+}
+
+.navbar {
+  background-color: white !important;
+  padding: 10px;
+  border-radius: 10px; 
+}
+
