--- a/rightstart-frontend/src/App.css
+++ b/rightstart-frontend/src/App.css
@@ -2,12 +2,40 @@ body {
   background-color: #CF9DC8; 
   z-index: 1;
 }
-
+.header-container {
+  position: relative;
+  z-index: 1;
+}
 .headerImage {
   opacity: 0.5;
   size: 100% auto;
   width: 100%;
   height: 450px;
+  z-index: 1;
+}
+
+.welcomeText {
+  position: absolute;
+  top: 38%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  font-size: 50px;
+  text-align: center;
+  text-shadow: 0 0 10px purple;
+  font-family: Comic Sans MS;
+  color: white;
+}
+.motto {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  font-size: 20px;
+  font-weight: 550;
+  text-align: center;
+  font-family: Comic Sans MS;
 }
 .writingOfLogo {
   width: 60px;
@@ -26,7 +54,7 @@ body {
   left: 50%;
   width: 80%;
   height: 30px;
-  z-index: 2;
+  z-index: 3;
   transform: translateX(-50%);
   opacity: 1.5;
 }
@@ -36,4 +64,53 @@ body {
   padding: 10px;
   border-radius: 10px; 
 }
+
+/* about */
+.about{
+  margin: 100px;
+}
+.aboutContent {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  padding: 20px;
+}
+.aboutHeader {
+  margin-top: -10px;
+  margin-bottom: 40px;
+  font-size: 40px;
+  color: white;
+  text-shadow: 0 0 10px purple;
+  text-align: center;
+  font-family: Comic Sans MS;
+}
+.aboutImagesArea{
+  display: flex;
+  align-items: left;
+  margin-right: 20px;
+}
+.about1Image {
+  width: 202.5px;
+  height: 297px;
+  z-index: 1;
+  transform: translate(60%,-05%);
+}
+.about2Image {
+  width: 162px;
+  height: 244px;
+  z-index: 2;
+  transform: translate(-100%,50%);
+}
+.aboutText{
+  font-family: Comic Sans MS;
+  text-align: left;
+  font-weight: 450;
+  font-size: 17px;
+}
+.aboutTextArea{
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: -10px;
+}
+
 
