changes to footer and enroll done

--- a/rightstart-frontend/src/App.css
+++ b/rightstart-frontend/src/App.css
@@ -113,7 +113,8 @@ body {
 }
 .ssfoptionSection{
   background-color: #E0986F;
-  margin: 30px;
+  margin-top: 30px;
+  margin-bottom: 30px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -147,13 +148,14 @@ body {
 /* mission and vision */
 .missionVision{
   background-color: #B26DAA;
-  margin: 30px;
+  margin-top: 30px;
+  margin-bottom: -60px;
 }
 .missionVisionContent{
   margin: 40px;
 }
 .missionVisionHeader{
-  margin-top: -20px;
+  margin-top: 20px;
   margin-bottom: 20px;
   font-size: 40px;
   color: white;
@@ -162,20 +164,22 @@ body {
 }
 .missionVisionEachSection{
   margin-top: 40px;
-  margin-bottom: 40px;
+  margin-bottom: 60px;
 }
 
 /* Enroll */
 .enrollPanel{
-  width: 450px;
-  height: 450px;
+  width: 550px;
+  height: 550px;
   background-color: white;
   border-color: white;
+  border-radius: 50%;
 }
 .enrollLogo{
   width: 150px;
   height: 300px;
   margin: 20px;
+  margin-bottom: 40px;
 }
 .enrollContainer{
   margin: 80px;
@@ -205,8 +209,45 @@ body {
 }
 
 /* Footer */
+.footerBorder{
+  background-color: white;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 90px;
+  margin-right: 90px;
+}
 .footerImage{
   width: 150px;
-  height: 300px;
+  height: 290px;
+  margin-right: -40px;
+}
+.socialSection{
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 10px;
+}
+.icon{
+  margin-right: 20px;
+  margin-left: 20px;
+  width: 40px;
+  height: 40px;
+}
+.locationIcon{
+  width: 45px;
+  height: 45px;
+}
+.footerSections{
+  display: flex;
+  margin: 20px;
+}
+.footer{
+  background-color: #E0986F;
+/* padding is space between content in the section and its 
+border whereas margin is the space outside the border */
+  padding: 60px;
+}
+.footerCol{
+  flex-basis: 33.33%;
 }
 
