--- a/rightstart-frontend/src/App.css
+++ b/rightstart-frontend/src/App.css
@@ -62,6 +62,43 @@ body {
 .navbar {
   background-color: white !important;
   padding: 10px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbarElements{
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbarElement{
+  margin-left: 30px;
+  margin-right: 30px;
+  color: #B26DAA;
+  font-size: 17px;
+  font-weight: 550;
+  font-family: Comic Sans MS;
+  text-decoration: none;
+}
+.dropdownMenu {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  background-color: white;
+  padding: 30px;
+  list-style: none;
+}
+.dropdownElement{
+  color: #973E8E;
+  font-size: 17px;
+  font-weight: 550;
+  text-decoration: none;
+  margin-bottom: 10px;
+}
+.dropdown:hover .dropdownMenu {
+  display: block;
 }
 
 /* about */
@@ -293,4 +330,79 @@ border whereas margin is the space outside the border */
   background-color: white;
   font-family: Comic Sans MS;
   color: purple;
+}
+
+/* enroll form */
+.overlay {
+  /* fixed means it will cover the entire viewport */
+  position: fixed; 
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 3;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #fff;
+  padding: 20px;
+  border: 1px solid #ccc;
+  z-index: 1;
+}
+body.modal-open {
+  /* hide anything out of the current view (stop scrolling) */
+  overflow: hidden;
+}
+.enrollFormContainer{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -40%);
+  background-color: #fff;
+  padding: 40px;
+  border: 1px solid #ccc;
+  z-index: 1;
+}
+.enrollName, .enrollEmail, .enrollMessage{
+  margin: 10px;
+  border-width: 2px;
+  border-color: #E0986F;
+}
+.enrollName::placeholder, .enrollEmail::placeholder, .enrollMessage::placeholder{
+  font-family: Comic Sans MS;
+}
+.enrollName, .enrollEmail{
+  width: 250px;
+  height: 20px;
+  border-width: 2px;
+}
+.enrollMessage{
+  width: 450px;
+  height: 150px
+}
+.enrollFormButton {
+  color: white;
+  background-color: #973E8E;
+  font-family: Comic Sans MS;
+  width: 50px;
+  height: 25px;
+  text-align: center;
+  border: none;
+  font-weight: 5000;
+  cursor: pointer;
+  font-size: 13px;
+  margin-left: 10px;
+}
+.enrollFormHeader{
+  margin-top: -5px;
+  font-size: 20px;
+  color: purple;
+  font-family: Comic Sans MS;
+  margin-left: 10px;
 }
