--- a/rightstart-frontend/src/App.css
+++ b/rightstart-frontend/src/App.css
@@ -2,13 +2,94 @@ body {
   background-color: #CF9DC8; 
   z-index: 1;
 }
+html {
+  box-sizing: border-box;
+}
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+@media (max-width: 900px) {
+  body {
+    /* sbackground-color: lightblue;  */
+  }
+  .home {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    max-width: 768px; /* Adjust the maximum width as needed */
+    margin: 0 auto;    /* Center the container */
+  }
+  .navbarLogo{
+    width: 120% !important;
+    height: 100% !important;
+  }
+}
+.home {
+  position: absolute;
+  width: 100%;
+  height: 100%;/* Adjust the maximum width as needed */
+  margin: 0 auto;    /* Center the container */
+}
+.header-container {
+  position: relative;
+  z-index: 1;
+}
+.ribbon-container {
+  position: relative;
+}
+.ribbon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 3;
+  opacity: 1.5;
+  background-color: white;
+}
+.navbar {
+  width: 100%; /* Add this line to make the navbar span the full width */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.navbarElements {
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbarElement {
+  margin-left: 30px;
+  margin-right: 30px;
+  color: #B26DAA;
+  font-size: 17px;
+  font-weight: 550;
+  font-family: Comic Sans MS;
+  text-decoration: none;
+}
+
+.ribbon .navbar{
+  display: inline-block;
+}
+.navbarImageContainer{
+  width: 10%;
+  height: 10%;
+  margin-left: 2%;
+}
+.navbarLogo{
+  width: 70%;
+  height: 70%;
+}
 .header-container {
   position: relative;
   z-index: 1;
 }
 .headerImage {
   opacity: 0.5;
-  size: 100% auto;
   width: 100%;
   height: 450px;
   z-index: 1;
@@ -37,51 +118,8 @@ body {
   text-align: center;
   font-family: Comic Sans MS;
 }
-.writingOfLogo {
-  width: 60px;
-  height: 60px;
-  margin-right: 5px;
-}
-.houseOfLogo {
-  width: 30px;
-  height: 60px;
-}
 
-.ribbon {
-  position: fixed;
-  position: fixed;
-  top: 2%;
-  left: 50%;
-  width: 80%;
-  height: 30px;
-  z-index: 3;
-  transform: translateX(-50%);
-  opacity: 1.5;
-}
 
-.navbar {
-  background-color: white !important;
-  padding: 10px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-}
-.navbarElements{
-  display: flex;
-  flex-direction: row;
-  list-style: none;
-  justify-content: space-between;
-  align-items: center;
-}
-.navbarElement{
-  margin-left: 30px;
-  margin-right: 30px;
-  color: #B26DAA;
-  font-size: 17px;
-  font-weight: 550;
-  font-family: Comic Sans MS;
-  text-decoration: none;
-}
 .dropdownMenu {
   display: none;
   position: absolute;
